fix diff beetwen sensor.py and the notebook example

--- a/src/CT4319_example.ipynb
+++ b/src/CT4319_example.ipynb
@@ -361,7 +361,7 @@
     "                                          \"Use\":\"Range setting: -1=Auto range, 0=Low range, 1=High range\",\n",
     "                                          \"Access Protection\":\"High\"}}\n",
     "\n",
-    "    def start_communication(self, port, baudrate=9600):\n",
+    "    def start_comm(self, port, baudrate=9600):\n",
     "        try:\n",
     "            self.ser.port = port\n",
     "            self.ser.baudrate = baudrate\n",
@@ -373,7 +373,7 @@
     "            print(\"Porta = \" + port)\n",
     "            print(\"Baudrate = \" + str(baudrate))\n",
     "\n",
-    "    def close_communication(self):\n",
+    "    def close_comm(self):\n",
     "        self.t_stop.set()\n",
     "        self.ser.close()\n",
     "\n",
@@ -523,6 +523,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import serial.tools.list_ports"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -592,7 +601,11 @@
    ],
    "source": [
     "ct = CT4319()\n",
-    "ct.start_communication(\"/dev/ttyUSB0\")\n",
+    "\n",
+    "for port in serial.tools.list_ports.comports():\n",
+    "    if port.pid == 8963:\n",
+    "        ct.start_communication(port.device)\n",
+    "\n",
     "ct.set_outputdir(os.getcwd())\n",
     "while True:\n",
     "    #coleta por 1 minuto e calcula média\n",
